<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_admin_brand"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/brands"
            />
        <item
            android:id="@+id/nav_admin_glass"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/glass"
            />
        <item
            android:id="@+id/nav_admin_machine"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/machine"
            />
        <item
            android:id="@+id/nav_admin_strap"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/strap"
            />
        <item
            android:id="@+id/nav_order_status"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_admin_user"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/customers" />
        <item
            android:id="@+id/nav_admin_product"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/products" />
    </group>
</menu>